--- a/master/makefile
+++ b/master/makefile
@@ -1,18 +1,18 @@
 obj = ../obj
 inc = ../inc
 src = ../src
-cc = clang++
+cc = g++
 CFLAGS = -std=c++11
 
-object = ${obj}/common.o ${obj}/master.o masternode.o
-target = masternode
+object = ${obj}/common.o  ${obj}/masterNode.o master.o
+target = master
 
 ${target}:${object}
-	${cc} -g -o $@ ${object}
+	${cc} -g -o $@ ${object} 
 ${obj}/%.o:${src}/%.cc
 	${cc} -g -c $< -o $@ -I ${inc}
-masternode.o:masternode.cc
-	${cc} -g -c masternode.cc -o masternode.o -I ${inc}
+master.o:master.cc
+	${cc} -g -c master.cc -o master.o -I ${inc}
 .PHONY:clean
 clean:
 	-rm $(target)
