--- a/pub/makefile
+++ b/pub/makefile
@@ -4,11 +4,11 @@ src = ../src
 cc = g++
 CFLAGS = -std=c++11
 
-object = ${obj}/common.o  ${obj}/pubNode.o pub.o
+object = ${obj}/common.o  ${obj}/pubNode.o ${obj}/pubThread.o pub.o
 target = pub
 
 ${target}:${object}
-	${cc} -g -o $@ ${object} 
+	${cc} -g -o $@ ${object} -lpthread
 ${obj}/%.o:${src}/%.cc
 	${cc} -g -c $< -o $@ -I ${inc}
 pub.o:pub.cc
